--- a/AddToBasket_Analysis.ipynb
+++ b/AddToBasket_Analysis.ipynb
@@ -55,8 +55,8 @@
    "outputs": [],
    "source": [
     "def query_cluster(query: str):\n",
-    "    host = \"kmobd2-dnode1.klingel.de\"\n",
-    "    port = 21050\n",
+    "    host = \"server.name.de\"\n",
+    "    port = 12345\n",
     "    cursor = connect(host=host, port=port).cursor()\n",
     "    cursor.execute(query)\n",
     "    return as_pandas(cursor)"
@@ -99,7 +99,7 @@
    "source": [
     "query = f'''\n",
     "select fullvisitorid, visitid, visitstarttime, productprice, medium\n",
-    "from  attribution.google_analytics\n",
+    "from  attribution.tableName\n",
     "where hostname = '{BU}'\n",
     "and actiontypetext='zum_warenkorb'\n",
     "'''\n",
@@ -121,8 +121,8 @@
     "###################################################\n",
     "# Pickle!\n",
     "###################################################\n",
-    "# data.to_pickle('ZumWarenkorb_MonaDE.pickle')\n",
-    "# data = pd.read_pickle('ZumWarenkorb_MonaDE.pickle')"
+    "# data.to_pickle('file.pickle')\n",
+    "# data = pd.read_pickle('file_old.pickle')"
    ]
   },
   {
